fix(Picker): adding custom z-index to align with our modals

--- a/packages/react-components/src/components/Picker/components/PickerList.module.scss
+++ b/packages/react-components/src/components/Picker/components/PickerList.module.scss
@@ -1,4 +1,5 @@
 .listbox {
+  z-index: 13001;
   margin: 0;
   border-radius: var(--radius-3);
   box-shadow: var(--shadow-pop-over);
